# test-movidius

./: CMakeLists.txt  LICENSE  README.md  main.cpp
movidius/: LICENSE
